<resources>
    <string name="app_name">The Mall App</string>
    <string name="app_name1">The Mall App</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="fb_app_id">869358796518933</string>
    <string name="tabs_offer">Offer</string>
    <string name="tabs_message">Messages</string>
    <string name="tabs_cards">Cards</string>
    <string name="tabs_profile">Profile</string>
    <string name="tabs_rewards">Rewards</string>
    <string name="continue_">Continue</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="next_">Next</string>
    <string name="all_">All</string>
    <string name="yes_">Yes</string>
	<string name="no_">No</string>
    <string name="edit_">Edit</string>
    <string name="nearby_">Nearby</string>
    <string name="offer_">Offers</string>
    <string name="news_">News</string>
    <string name="country">Country</string>
    <string name="phone_no">Phone Number</string>
    <string name="side_menu_header">Select a center first</string>
	<string name="register_country_1">Select your country, enter your phone number and press continue</string>
	<string name="register_country_2">Select Country</string>
	<string name="register_country_3">Number without the country code</string>
	<string name="register_country_4">Receive push notifications/SMS</string>
	<string name="register_country_5">An access code will be sent to you by SMS</string>
	<string name="register_country_6">Enter Country name</string>
	<string name="register_country_7">Phone Number Verification</string>
	<string name="register_country_8">Is this your correct number?</string>
	<string name="register_country_9">An SMS with your Access code will be sent into this number.</string>
	<string name="register_country_10">SMS faild, please try again</string>
	<string name="register_country_11">SMS sent</string>
	<string name="register_welcome">Welcome to The Mall App</string>
	<string name="register_dummy1">Lorem ipsum dolor sit er elit lamet,</string>
	<string name="register_dummy2">consectetaur cilium adepisicing pecu,</string>
	<string name="register_dummy3">sed do eiusmod tempor incidedunt ut</string>
	<string name="register_dummy4">labore et dolore magna aliqua.</string>
	<string name="registration_with_phone_button_title">Register with Phone</string>
	<string name="registration_wtih_facebook_button_title">Register with Facebook</string>
	<string name="notifications">Notifications</string>
	<string name="reg_suc">Registration successful</string>
	<string name="up_suc">Updated successfully</string>
	<string name="select_center">Please select at least one center</string>
	<string name="select_interest">Please select at least one interest</string>
	<string name="push_msg">Please accept, receiving push notifications/SMS</string>
	<string name="access_code_country">Sent SMS successfully</string>
	<string name="access_code_country_1">Please enter the verification code</string>
	<string name="access_code_country_2">Access code</string>
	<string name="access_code_country_3">If you do not receive your access code with in 60 second. Let us...</string>
	<string name="access_code_country_4">Please enter code.</string>
	<string name="access_code_country_6">Code sent</string>
	<string name="access_code_country_5"><u>Resend code</u></string>
	<string name="register_profile_1">Add photo</string>
	<string name="register_profile_2">Your Name</string>
	<string name="register_profile_3">Sync with Facebook</string>
	<string name="register_error_name_message">Please enter name</string>
	<string name="register_error_email_message">Please enter email</string>
	<string name="register_error_email_validity_message">Please enter a valid email</string>
	<string name="location_msg1">Location services disabled</string>
	<string name="location_msg2">Mall App needs access to your location. Please turn on location access</string>
	<string name="location_msg3">Check Network Connection</string>
	<string name="location_msg4">Location services disabled</string>
	<string name="location_msg5">Location services disabled</string>
	<string name="fav_center1">Select your favourite Center</string>
	<string name="fav_interest">Select your interest</string>
	<string name="fav_interest1">Select all</string>
	<string name="share">Share</string>
    <string name="share_points"> 5pts</string>
    <string name="go_to_shop">Go to Shop</string>
    <string name="go_to_rest">Go to Restaurant</string>
    <string name="related_offers">Related Offers</string>
	<string name="cancel_button_title">Cancel</string>
	<string name="done_title">Done</string>
	<string name="location_title">Location</string>
	<string name="location_text_view_place_holder">Enter location</string>
	<string name="no_data">No offers and news available for this mall</string>
	<string name="name">Name</string>
	<string name="add_photo">Add Photo</string>
	<string name="email">Email</string>
	<string name="birthday">Birthday</string>
	<string name="location">Add Location</string>
	<string name="add_date">Add Date</string>
	<string name="enter_location">Enter Location</string>
	<string name="male">Male</string>
	<string name="female">Female</string>
	<string name="sync_facebook_button_title">Sync with Facebook</string>
	<string name="sending_phone_number_dialog_message">Sending Verification Code</string>
	<string name="verifying_code_dialog_message">Verifying Verification Code</string>
	<string name="registration_with_fb_dialog_message">Registration with Facebook</string>
	<string name="updating_profile_data_message">Updating Profile</string>
	<string name="updating_center_data_message">Updating Centers</string>
	<string name="updating_interest_data_message">Updating Interests</string>
	<string name="loading_data_message">Loading</string>
	<string name="wait">Please wait...</string>
	<string name="login_in_message">Signing In</string>
	<string name="request_error_message">Something went wrong. Please try again later</string>
	<string name="shop_error_message">No shops found for this mall</string>
	<string name="fav_error_message">No favorites found</string>
	<string name="floor_error_message">No floor found</string>
	<string name="rest_error_message">No restaurants found for this mall</string>
	<string name="service_error_message">No services found for this mall</string>
	<string name="add_new_place_error_message">Please enter place name</string>
	<string name="no_internet">No internet</string>
	<string name="network_error">There is problem with your network connection</string>
	<string name="loading_error">It appears we have a problem...</string>
	<string name="home_page">Go to Homepage</string>
	<string name="rest_offer_title">The Restaurant Offers</string>
	<string name="rest_news_title">The Restaurant News</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="title_activity_webview">WebviewActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_fullscreen_maps">MapFullScreenActivity</string>
	<string name="call_alert">Are you sure to make call </string>
	<string name="confirmation">Confirmation </string>
	<string name="build_verion">Android Build Version </string>
	<string name="title_settings">Settings</string>
	<string name="edit_profile">Edit Profile</string>
	<string name="edit_centers">Centers</string>
	<string name="edit_interests">Interests</string>
	<string name="help">Help</string>
	<string name="privacy_policy">Privacy Policy</string>
	<string name="about_us">About Us</string>
	<string name="logout">Logout</string>
	<string name="notification">Notifications</string>
	<string name="change_language">Change Language</string>
	<string name="ph_def">Phone Default</string>
	<string name="eng_language">English</string>
	<string name="dan_language">Danish</string>
	<string name="logout_dialog_title">Mall App</string>
	<string name="help_url">http://108.163.184.34/mallappwp/?page_id=47</string>
	<string name="privacy_url">http://108.163.184.34/mallappwp/?page_id=58</string>
	<string name="about_url">http://108.163.184.34/mallappwp/?page_id=27</string>
	<string name="logout_dialog_message">Are you sure you want to logout?</string>
	<string name="mall_app_invite_msg">Hi, I have joined MallApp which is service that help you find the best offers for mall near you. Join the MallApp by downloading MallApp to your smartphone. \n https://play.google.com/store/apps/details?id=com.mallapp.View</string>
	<string name="card_name">Card Name</string>
	<string name="card_number">Card Number</string>
	<string name="provider_name">Provider Name</string>
	<string name="barcode_number">Barcode Number</string>
	<string name="description">Description</string>
</resources>