<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_card_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/greylight"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/scrollView"
            layout="@layout/header_card_detail" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="225dp"
                android:layout_margin="@dimen/margin_left_5">

                <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/pager"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                </android.support.v4.view.ViewPager>

                <com.viewpagerindicator.CirclePageIndicator
                    android:id="@+id/indicator"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:gravity="bottom"
                    android:padding="10dip"
                    app:centered="true"
                    app:fillColor="@color/purple"
                    app:pageColor="@color/grey"
                    app:snap="false" />

            </RelativeLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/grey" />

            <TextView
                style="@style/AddCardTextView"
                android:text="@string/provider_name"/>

            <TextView
                android:id="@+id/tv_provider"
                style="@style/DetailCardTextView"
                android:text="@string/card_name"/>
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/grey" />

            <TextView
                style="@style/AddCardTextView"
                android:text="@string/card_number"/>

            <TextView
                android:id="@+id/tv_cardNum"
                style="@style/DetailCardTextView"
                android:text="@string/card_name"/>
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/grey" />

            <TextView
                style="@style/AddCardTextView"
                android:text="@string/barcode_number"/>

            <TextView
                android:id="@+id/tv_barcodeNum"
                style="@style/DetailCardTextView"
                android:text="@string/card_name"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_left_15">

                <ImageView
                    android:id="@+id/iv_barcode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@drawable/mallapp_placeholder"/>

            </RelativeLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/grey" />

            <TextView
                android:id="@+id/tv_descTitle"
                style="@style/AddCardTextView"
                android:text="@string/description"/>

            <TextView
                android:id="@+id/tv_description"
                style="@style/DetailCardTextView"
                android:layout_marginBottom="@dimen/margin_left_5"
                android:text="@string/card_name"/>


        </LinearLayout>

    </ScrollView>

</LinearLayout>