<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple"
    tools:context="com.mallapp.View.RegistrationActivity">

    <Button
        android:id="@+id/btn_register_phone"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/registration_with_phone_button_title"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tv_dummy"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:textColor="@color/white"
        android:background="@drawable/registration_button_background" />

    <Button
        android:id="@+id/btn_register_fb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/registration_wtih_facebook_button_title"
        android:layout_below="@+id/btn_register_phone"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:textColor="@color/white"
        android:drawableLeft="@drawable/facebook_icon_register"
        android:background="@drawable/registration_button_background"/>

    <ImageView
        android:id="@+id/iv_icon_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="60dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/logo"
        />

    <TextView
        android:id="@+id/tv_welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:text="@string/register_welcome"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_below="@id/iv_icon_logo"/>
    <TextView
        android:id="@+id/tv_dummy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_below="@+id/tv_welcome_text"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_centerHorizontal="true"
        android:textSize="15sp"
        android:text="@string/register_dummy"/>

</RelativeLayout>
