<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/top_bar"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/cancel_button_title"
            android:layout_centerVertical="true"
            android:paddingLeft="10dp"
            android:textSize="18sp"
            android:textColor="#f5f4f4" />

        <Button
            android:id="@+id/done"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:layout_toLeftOf="@+id/endorsement_name_text_view"
            android:text="@string/done_title"
            android:textColor="#f5f4f4"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/endorsement_name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="100dp"
            android:paddingLeft="10dp"
            android:paddingRight="15dp"
            android:text="@string/location_title"
            android:textColor="@android:color/white"
            android:textSize="22sp"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/selecte_location_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginLeft="28dp"
        android:text="Location"
        android:textSize="18dp"
        android:visibility="gone"
        />

    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:paddingLeft="10dp"-->
    <!--android:paddingRight="10dp"-->
    <!--android:orientation="horizontal">-->
    <!--android:drawableLeft="@drawable/search_icon1"-->

    <AutoCompleteTextView
        android:id="@+id/autoComplete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="14sp"
        android:drawableTop="@drawable/dividing_line"
        android:drawableBottom="@drawable/dividing_line"
        android:hint="@string/location_text_view_place_holder"
        android:inputType="text"
        android:completionThreshold="1"
        android:background="@null"
        android:paddingTop="1dp"
        android:drawablePadding="15dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">
        <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/cancel"-->
        <!--/>-->

        <requestFocus />
    </AutoCompleteTextView>

    <!--<TextView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="match_parent"-->
    <!--android:text="@string/cancel"-->
    <!--android:textColor="@color/material_blue_grey_800"-->
    <!--android:textSize="18sp"/>-->
    <!--</LinearLayout>-->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <!-- List View -->
        <ListView
            android:id="@+id/search_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible" />


    </FrameLayout>

</LinearLayout>
