<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:scrollbars="none"
    android:layout_height="match_parent">
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
	    <include layout="@layout/activity_detail_header" />
    <ImageView
        android:id="@+id/offer_image"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/img_04"
        android:contentDescription="@string/app_name"/>
    
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gotoshop_background">
        
        <TextView
            android:id="@+id/shop_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:textColor="@color/white"
            android:textSize="@dimen/text_20"
             />

        <Button
            android:id="@+id/go_to_shop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="15dp"
            android:drawableRight="@drawable/go_to_shop_indicator"
            android:background="@color/transparent"
            android:textColor="@color/white"
            android:textSize="@dimen/text_18"
            android:drawablePadding="10dp"
            android:text="@string/go_to_shop"
            android:textStyle="italic" />
        
    </RelativeLayout>

    <TextView
        android:id="@+id/offer_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_left_15"
        android:textColor="@color/black3"
        android:textSize="@dimen/text_15"
         />
    
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical">
        
        <Button
            android:id="@+id/share_detail_popup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/share_offer_detail"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:paddingLeft="20dp"
            android:text="@string/share" />

        <Button
            android:id="@+id/reward_points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/share_detail_popup"
            android:layout_marginLeft="2dp"
            android:background="@drawable/points_indicator"
            android:paddingLeft="10dp"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:text="@string/share_points" />
    </RelativeLayout>
    
    <LinearLayout
    	android:id="@+id/social_layout"
   		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="10sp"
		android:orientation="horizontal"
		android:visibility="gone" >
		<include layout="@layout/offer_detail_share_tab"/>
	</LinearLayout>
    
   <!-- <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple"
        android:layout_marginTop="20dp"
        android:padding="5dp">
        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/related_offers"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/related_offers"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    </LinearLayout>-->
	</LinearLayout>
</ScrollView>